--- a/rasa/domain.yml
+++ b/rasa/domain.yml
@@ -72,6 +72,16 @@ intents:
   - que_pasa
   - Chim
   - nombre
+  - tiempo_calor
+  - tiempo_frio
+  - tiempo_min
+  - bot_opinion
+  - bot_sabes
+  - usuario_que_te_gustaria_saber_de_mí
+  - usuario_origen
+  - usuario_hobby
+  - usuario_comida_favorita
+  - bot_hobbies
 
 responses:
   utter_usuario_saluda_hola:
@@ -140,7 +150,7 @@ responses:
   - text: "A veces está bien estar solo"
   
   utter_usuario_contento:
-  - text: "Si estás feliz yo también lo estoy"
+  - text: "Si estás feliz, yo también lo estoy"
   - text: "Me alegra oír eso"
   
   utter_usuario_emocionado:
@@ -158,7 +168,7 @@ responses:
   
   utter_usuario_ocupado:
   - text: "Si estás tan ocupado mejor que dejemos la conversación"
-  - text: "Entiendo, cuando estés libre ya hablamos"
+  - text: "Entiendo, cuando estés libre, ya hablamos"
   - text: "Lo que puedas hacer hoy no lo dejes para mañana"
   
   utter_usuario_enfadado:
@@ -203,7 +213,7 @@ responses:
 
   utter_bot_eres_persona:
   - text: "Claro, de carne y hueso"
-  - text: "Si, no sabría como demostrátelo pero confía"
+  - text: "Si, no sabría como demostrártelo, pero confía"
   - text: "Soy una persona, no creo que un robot sea capaz de hablar así. Y si lo hiciera daría bastante miedo."
   - text: "Más persona que no robot"
 
@@ -324,7 +334,7 @@ responses:
   - text: "Sí listo para lo que venga"
 
   utter_bot_donde_estas:
-  - text: "No sabréa decirte, estoy en una habitación"
+  - text: "No sabría decirte, estoy en una habitación"
   - text: "Estoy en una habitación"
   - text: "Hablando contigo, pero físicamente no sé donde estoy"
 
@@ -348,7 +358,7 @@ responses:
   - text: "Gracias"
 
   utter_bot_amable:
-  - text: "Gracias, tu también lo eres"
+  - text: "Gracias, tú también lo eres"
   - text: "Intento llevarme bien con todo el mundo"
   - text: "La educación va siempre por delante"
 
@@ -416,7 +426,7 @@ responses:
 
   utter_bot_de_nada:
   - text: "No sé como responder a de nada"
-  - text: "Ahora ¿qué digo?"
+  - text: "Ahora, ¿qué digo?"
   - text: "Bueno, cambiemos de tema."
 
   utter_cambiar_de_tema:
@@ -463,6 +473,54 @@ responses:
     - text: "No sé que es eso, lo siento"
     - text: "¿Podemos hablar de otra cosa? No sé que es eso"
     - text: "Hay alguna otra cosa de la que quieras hablar, no sé que es eso"
+
+  utter_tiempo_calor:
+    - text: "Y que lo digas, estoy sudando"
+    - text: "No veas, ¡¡¡qué bochorno!!!"
+    - text: "En verano que se le va a hacer"
+
+  utter_tiempo_frio:
+    - text: "¡¿Qué dices?! De frío nada"
+    - text: "Estás loco, si parece que estemos a mil grados"
+    - text: "No estaremos en el mismo sitio porque aquí hace un calor infernal"
+
+  utter_tiempo_min:
+    - text: "No sabría decirte, un par de minutos"
+    - text: "No mucho entre uno y cinco minutos"
+    - text: "Ni idea, el tiempo vuela"
+
+  utter_bot_opinion:
+    - text: "No sabría que decirte, es un tema que desconozco"
+    - text: "No tengo una opinión muy clara sobre eso"
+
+  utter_bot_sabes:
+    - text: "No, no sé que es"
+    - text: "Ni idea, ¿Puedes explicármelo?"
+
+  utter_usuario_que_te_gustaria_saber_de_mí:
+    - text: "¿De dónde eres?"
+    - text: "¿Cuáles son tus hobbies?"
+    - text: "¿Cuál es tu comida favorita?"
+
+  utter_usuario_origen:
+    - text: "Guay"
+    - text: "Como mola, algún día me gustaría viajar hacia ahí"
+    - text: "Ala, qué sitio"
+
+  utter_usuario_hobby:
+    - text: "Mola, qué interesante"
+    - text: "Guau, parece que te toman mucho tiempo"
+    - text: "Con esos hobbies te lo pasarás genial"
+
+  utter_usuario_comida_favorita:
+    - text: "Normal, está riquísimo"
+    - text: "Está buenísimo"
+    - text: "Mmmmm, qué buen gusto"
+
+  utter_bot_hobbies:
+    - text: "Me gusta dibujar y bailar"
+    - text: "Me paso mucho tiempo dibujando, es algo que realmente disfruto"
+    - text: "Cantar, bailar y sobre todo dibujar"
 
 session_config:
   session_expiration_time: 60
